<resources>
    <string name="app_name">UpTodo</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="welcome_to_uptodo">Welcome to UpTodo</string>
    <string name="create_new_account">Please login to your account or create new account to continue</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="task_date">Task Date</string>
    <string name="task_time">Task Time</string>
    <string name="task_category">Task Category</string>
    <string name="task_priority">Task Priority</string>
    <string name="add_task">Add Task</string>
    <string name="do_math_homework">Do math homework</string>
    <string name="description">Description</string>
    <string name="choose_category">Choose category</string>
    <string name="add_task_priority">Add Task Priority</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_task">Edit task</string>
    <string name="edit">Edit</string>
    <string-array name="status_tasks">
        <item>Tasks</item>
        <item>Completed</item>
        <item>Incomplete</item>
    </string-array>
    <string name="completed_task_message">Did you actually complete the task?</string>
    <string name="in_completed_task_message">Are you sure you want to restart the task?</string>
    <string name="account">Account</string>
    <string name="change_account_name">Change account name</string>
    <string name="change_image">Change account Image</string>
    <string name="about_us">About US</string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="support_us">Support US</string>
    <string name="name">Name</string>
    <string name="app_version">Version:1.1</string>
    <string name="developer">Developer from Isoqov Jamshid</string>
    <string name="contact_us"><![CDATA[Contact & Feedback]]></string>
    <string name="share">Share App</string>
    <string name="general">General</string>

    <string-array name="intro_titles">
        <item>Manage your tasks</item>
        <item>Create daily routine</item>
        <item>Organized your tasks</item>
    </string-array>

    <string-array name="intro_subtitles">
        <item>You can easily manage all of your daily tasks in DoMe for free</item>
        <item>In Uptodo  you can create your personalized routine to stay productive</item>
        <item>You can organize your daily tasks by adding your tasks into separate categories</item>
    </string-array>

</resources>