<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_shape"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/add_task"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/hintColor" />



        <EditText
            android:id="@+id/ed_task_title"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            android:backgroundTint="@color/hintColor"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/hintColor"
            android:hint="@string/do_math_homework"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/ed_task_description"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:backgroundTint="@color/hintColor"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            android:hint="@string/description"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_intro_btn_next"
        android:text="@string/save" />

</LinearLayout>