<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_shape"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/change_account_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/hintColor" />



        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            android:backgroundTint="@color/hintColor"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/hintColor"
            android:hint="@string/name"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/intro_btn_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_intro_btn_next"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>