<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_close_btn"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_bold"
            android:text="@string/profile"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_user"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:shapeAppearanceOverlay="@style/ShapeImageView" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_user"
        app:layout_constraintStart_toStartOf="@id/img_user"
        app:layout_constraintTop_toBottomOf="@id/img_user"
        tools:text="Martha Hays" />


    <LinearLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/hintColor" />

        <TextView
            android:id="@+id/tv_change_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/change_account_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_change_image_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/change_image"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_camera" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/app_name"
            android:textColor="@color/hintColor" />

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/about_us"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_menu" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/contact_us"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_flash" />

        <TextView
            android:id="@+id/tv_support_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/support_us"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_like" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>