<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F71C1C1C"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tv_support_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?selectableItemBackground"
        android:drawablePadding="16sp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/support_us"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_like" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#E1DFDF" />

    <TextView
        android:id="@+id/tv_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:drawablePadding="16sp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_share" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="#E1DFDF" />

    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:drawablePadding="16sp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/about_us"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_menu" />

</LinearLayout>