<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.screens.update.UpdateTodoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_close_btn"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:text="@string/do_math_homework"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/tv_task_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:text="@string/task_date"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_text_add_todo"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:textSize="12sp"
                tools:text="January 21,2022" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/tv_task_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:text="@string/task_time"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_timer" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_text_add_todo"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:textSize="12sp"
                tools:text="12:21 PM" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/tv_task_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:text="@string/task_category"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_tag" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_text_add_todo"
                android:drawablePadding="12dp"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_university"
                tools:text="University" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/tv_task_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="12dp"
                android:text="@string/task_priority"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_flag" />

            <TextView
                android:id="@+id/tv_priority"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/bg_text_add_todo"
                android:drawablePadding="12dp"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_flag"
                tools:text="Default" />

        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16sp"
        android:layout_marginBottom="16sp"
        android:background="@drawable/bg_intro_btn_next"
        android:text="@string/edit_task"
        android:textAllCaps="false"
        android:textSize="16sp" />


</FrameLayout>