<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_light_black"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/edit_task"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/hintColor" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            tools:text="@tools:sample/lorem[10]/random" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/intro_btn_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_intro_btn_next"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>